Fix survey title on mobile

--- a/app/assets/stylesheets/lists.less
+++ b/app/assets/stylesheets/lists.less
@@ -43,6 +43,7 @@ body.list_view {
 .survey {
   .title-row {
     padding: 15px 10px;
+    @media (max-width: 767px) { min-height: 35px; }
     font-size: 18px;
     font-weight: bold;
     position: relative;
@@ -83,7 +84,7 @@ body.list_view {
     .arrow {
       position: absolute;
       right: 21px;
-      top: 16px;
+      top: 30%;
     }
   }
 
